--- a/lib/styles/layouts.styl
+++ b/lib/styles/layouts.styl
@@ -4,7 +4,45 @@
   border-radius 5px
   border solid 1px transparent
   background-color #fff
-  transition: all .4s ease;
+  transition all .4s ease
   
 
 
+.tag
+  display inline-flex
+  cursor pointer
+  margin 10px
+  color rgba(255, 255, 255, 0.8)
+  font-size 14px
+  padding 4px 10px
+  border-radius 4px
+  &:hover 
+    opacity 0.6
+  
+  &:nth-child(1n + 0) 
+    background #3f51b5
+
+  &:nth-child(2n + 0) 
+    background #36c978
+
+  &:nth-child(3n + 0) 
+    background $accentColor
+
+  &:nth-child(4n + 0) 
+    background #bbbbee
+
+  &:nth-child(5n + 0) 
+    background #dd5c53
+
+  &:nth-child(6n + 0) 
+    background #00abc0
+
+  &:nth-child(7n + 0) 
+    background #2196f3
+
+  &:nth-child(8n + 0) 
+    background #9ab2e0
+  
+  &:nth-child(9n + 0) 
+    background #34dad4
+  
